--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2,6 +2,13 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+@layer base {
+	button {
+		@apply outline-none select-none;
+		-webkit-tap-highlight-color: transparent;
+	}
+}
+
 html, body, #app {
 	height: 100%;
 	max-height: 100%;
