Initial new stats component with utils

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -12,6 +12,14 @@
 	.text-ellipsis {
 		@apply overflow-ellipsis max-w-full overflow-hidden whitespace-nowrap;
 	}
+
+	.text-btn {
+		@apply px-3 py-2 font-bold text-xs tracking-wide focus:outline-none active:ring active:ring-teal-600 active:ring-opacity-70 rounded disabled:opacity-30 text-gray-900/90 dark:text-gray-150/90 hover-hover:hover:text-gray-900/100 hover-hover:hover:dark:text-gray-150/100 disabled:text-gray-800 dark:disabled:text-gray-100;
+	}
+
+	.text-btn.danger {
+		@apply text-red-700 active:ring-red-600;
+	}
 }
 
 
