--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -20,6 +20,26 @@
 	.text-btn.danger {
 		@apply text-red-700 active:ring-red-600;
 	}
+
+	.bleed-grid-2 {
+	--basePadding: theme(padding.2);
+	}
+	.bleed-grid-4 {
+		--basePadding: theme(padding.4);
+	}
+	.bleed-grid-6 {
+		--basePadding: theme(padding.6);
+	}
+	.v-grid-bleed {
+		grid-template-columns: 1fr min(calc(100vw - 2 * var(--basePadding, 1rem)), 44rem) 1fr;
+
+	}
+	.v-grid-bleed > * {
+		grid-column: 2 / span 1;
+	}
+	.v-grid-bleed > .full-bleed {
+		grid-column: 1 / -1;
+	}
 }
 
 @layer utilities {
