Fix: ios double-tap zoom while playing

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 
 @layer base {
+	* {
+		/* hopefully fixes/disables ios double-tap zooming */
+		@apply touch-manipulation;
+	}
 	button {
 		@apply outline-none select-none;		
 	}
