--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -26,6 +26,9 @@
 	select {
 		@apply rounded dark:bg-slate-700 dark:border-slate-600 dark:text-gray-100 focus:border-teal-500 focus:ring-teal-500 focus:ring-2;
 	}
+	select:is(.dark *) {
+		background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='white' stroke-opacity='0.8' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
+	}
 
 	input[type="range"] {
 		@apply appearance-none w-full p-0 bg-transparent focus:outline-none focus:ring-0 focus:shadow-none disabled:opacity-60;
