--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -55,38 +55,11 @@
 }
 
 @layer components {
-	.text-ellipsis {
-		@apply overflow-ellipsis max-w-full overflow-hidden whitespace-nowrap;
-	}
 
-	.text-btn {
-		@apply px-3 py-2 font-bold text-xs tracking-wide focus:outline-none active:ring active:ring-teal-600 active:ring-opacity-70 rounded disabled:opacity-30 text-gray-900/90 dark:text-gray-150/90 hover-hover:hover:text-gray-900/100 hover-hover:hover:dark:text-gray-150/100 disabled:text-gray-800 dark:disabled:text-gray-100;
-		@apply hover-hover:hover:dark:enabled:bg-white/10 hover-hover:hover:enabled:bg-gray-500/10;
-	}
+}
 
-	.text-btn.danger {
-		@apply text-red-700 active:ring-red-600 dark:text-red-400/80 dark:active:ring-red-400;
-	}
-
-	.bleed-grid-2 {
-	--basePadding: theme(padding.2);
-	}
-	.bleed-grid-4 {
-		--basePadding: theme(padding.4);
-	}
-	.bleed-grid-6 {
-		--basePadding: theme(padding.6);
-	}
-	.v-grid-bleed {
-		grid-template-columns: 1fr min(calc(100vw - 2 * var(--basePadding, 1rem)), 44rem) 1fr;
-
-	}
-	.v-grid-bleed > * {
-		grid-column: 2 / span 1;
-	}
-	.v-grid-bleed > .full-bleed {
-		grid-column: 1 / -1;
-	}
+@layer utilities {
+	
 }
 
 
