--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -52,6 +52,10 @@
 	input[type="range"]:focus::-moz-range-thumb {
 		@apply shadow-black/30 shadow;
 	}
+
+	input[type="text"], input[type="number"] {
+		@apply dark:bg-slate-700 dark:text-white dark:border-slate-500 dark:focus:ring-blue-300;
+	}
 }
 
 @layer components {
